--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "@reduxjs/toolkit": "^1.6.2",
+    "@tailwindcss/forms": "^0.3.4",
+    "autoprefixer": "^10.4.0",
     "next": "12.0.2",
+    "postcss": "^8.3.11",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
