--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
-    "@reduxjs/toolkit": "^1.6.2",
+    "@reduxjs/toolkit": "^1.7.1",
     "@tailwindcss/forms": "^0.3.4",
     "autoprefixer": "^10.4.0",
+    "classnames": "^2.3.1",
     "next": "12.0.2",
     "postcss": "^8.3.11",
     "react": "17.0.2",
@@ -23,8 +24,18 @@
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
-    "eslint": "7",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.5.0",
     "eslint-config-next": "12.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.4.0",
+    "prettier": "^2.5.1",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
     "typescript": "4.4.4"
   }
 }
