--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@reduxjs/toolkit": "^1.7.1",
-    "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/forms": "^0.4.0",
     "autoprefixer": "^10.4.0",
     "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "next": "12.0.2",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.0.7"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
