--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@tailwindcss/forms": "^0.4.0",
     "autoprefixer": "^10.4.0",
     "classnames": "^2.3.1",
+    "evergreen-ui": "^6.6.3",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "next": "12.0.2",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
-    "tailwindcss": "^3.0.7"
+    "tailwindcss": "^3.0.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
