--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@mui/material": "^5.2.7",
+    "@mui/x-data-grid": "^5.2.1",
     "@reduxjs/toolkit": "^1.7.1",
+    "@supabase/supabase-js": "^1.29.1",
     "@tailwindcss/forms": "^0.4.0",
+    "add": "^2.0.6",
     "autoprefixer": "^10.4.0",
     "classnames": "^2.3.1",
     "evergreen-ui": "^6.6.3",
@@ -22,7 +28,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
+    "react-table": "^7.7.0",
     "tailwindcss": "^3.0.7",
+    "yarn": "^1.22.17",
     "yup": "^0.32.11"
   },
   "devDependencies": {
