--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.0",
     "classnames": "^2.3.1",
     "evergreen-ui": "^6.6.3",
+    "firebase": "^9.6.2",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "next": "12.0.2",
