--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "next": "12.0.2",
+    "next-auth": "^4.1.2",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
